--- a/src/snakefiles/qc.yml
+++ b/src/snakefiles/qc.yml
@@ -5,5 +5,5 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - trimmomatic=0.35
+    - trimmomatic=0.35  # Above breaks the trick of process substitution
     # - gzip  # gzip should be installed
