--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# Travis configuration file
 ---
 dist: trusty
 
@@ -13,8 +12,8 @@ addons:
 cache:
     timeout: 1000
     directories:
-        - "$HOME/miniconda3_$TRAVIS_OS_NAME"
-        - "$TRAVIS_BUILD_DIR/.snakemake/conda"  # snakemake envs
+        - $HOME/miniconda3_$TRAVIS_OS_NAME
+        - $TRAVIS_BUILD_DIR/.snakemake/conda    # snakemake envs
 
 before_install: |
     url="https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh"
