--- a/params.yml
+++ b/params.yml
@@ -18,58 +18,4 @@ bwa:
     threads: 2
     extra: ''
 
-picard_markduplicates:
-    memory_gb: 1
-
-popoolation:
-    find_indels:
-        indel_window: 5
-        min_count: 2
-    subsample:
-        min_qual: 20
-        method: withoutreplace
-        target_coverage: 10
-        # max_coverage: from tsv
-    D:
-        min_count: 2
-        min_coverage: 4
-        # max_coverage: from tsv
-        min_covered_fraction: 0.5
-        # pool_size: from tsv
-        step_size: 1000
-        window_size: 1000
-    pi:
-        min_count: 2
-        min_coverage: 4
-        # max_coverage: from tsv
-        min_covered_fraction: 0.5
-        # pool_size: from tsv
-        step_size: 1000
-        window_size: 1000
-    theta:
-        min_count: 2
-        min_coverage: 4
-        # max_coverage: from tsv
-        min_covered_fraction: 0.5
-        # pool_size: from tsv
-        step_size: 1000
-        window_size: 1000
-
-popoolation2:
-    find_indels:
-        indel_window: 5
-        min_count: 20
-    subsample:
-        min_qual: 20
-        method: withoutreplace
-        target_coverage: 10
-        # max_coverage: from tsv
-        memory_gb: 2
-    fst:
-        min_count: 3
-        min_coverage: 4
-        # max_coverage: from tsv
-        min_covered_fraction: 1.0
-        # pool_size: from tsv
-        window_size: 1
-        step_size: 1
+bcftools:
